syntax = "proto3";
package fighter;

option go_package="../../battle-service/proto/fighter";


enum UnitType {
  UNIT_TYPE_UNKNOWN = 0;
  UNIT_TYPE_TANK = 1;
  UNIT_TYPE_HEALER = 2;
  UNIT_TYPE_SUPPORT = 3;
  UNIT_TYPE_ATTACKER = 4;
}

enum Element {
  ELEMENT_UNKNOWN = 0;
  ELEMENT_FIRE = 1;
  ELEMENT_WATER = 2;
  ELEMENT_GRASS = 3;
}

message Unit {
  string id = 1;
  string name = 2;
  Element element = 3;
  UnitType type = 4;
}

message UnitByIDRequest {
    string id = 1;
}

message UnitByIDResponse {
    Unit unit = 1;
}

service FighterService {
    rpc UnitByID (UnitByIDRequest) returns (UnitByIDResponse);
}